# count

./: .travis.yml  Cargo.toml  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: deploy.yaml  workflow.yaml
ci/: before_deploy.bash  before_deploy.sh  script.bash  script.sh
src/: lib.rs  main.rs
test/data/: toplevel-1k.txt
tests/: cli.rs
tests/data/: toplevel-1k.txt
tests/utils/: pattern.awk
