[package]
name = "count"
version = "0.2.2"
authors = ["Julian Gehring"]
edition = "2018"

[dependencies]
hashbrown = {version = "0.11.2", features = ["rayon"]}
rayon = "1.5.1"
structopt = "0.3.22"

[dev-dependencies]
assert_cmd = "1.0.7"
predicates = "2.0.2"

[profile.release]
lto = true
codegen-units = 1
