[package]
name = "count"
version = "0.2.2"
authors = ["Julian Gehring"]
edition = "2021"

[dependencies]
hashbrown = { version = "0.12.1", features = ["rayon"] }
rayon = "1.5.3"
clap = { version = "3.2.19", features = [
    "derive",
    "std",
], default-features = false }
partial_sort = "0.1.2"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
